                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.1.0

  *) [TS-1086] Avoid edge case returning 304 to an unconditional request.
     Diagnosis and patch by Mohamad Khateeb.

  *) [TS-2168] Make RecordsConfig.cc more inline with default builds.

  *) [TS-2174] traffic_shell/traffic_line miss some stats value

  *) [TS-2173] RECD_COUNTER type is missing in setTokenValue().

  *) [TS-2165] Introduce cluster-wide logging stats.

  *) [TS-2167] Update apichecker.pl to give suggestions on additional
   deprecated APIs.

  *) [TS-2163] Remove WDA_BILLING, ACC_ALARMS etc. code and definitions.

  *) [TS-2156] Fix stats trap in different type of threads.

  *) [TS-2160] Remove ats_is_ip_nonroutable and replace it with the less confusing
   ats_is_ip_linklocal and ats_is_ip_private.

  *) [TS-2158] Properly mark an IP as non-routable for IPv4 and IPv6 link local
   addresses as well as IPv6 private addresses and IPv4 Carrier Grade NAT
   addresses from RFC 6598.

  *) [TS-2155] Make a new RAT exclude file that uses the regular expressions
   now supported. Also cleanup some of minor licensing discrepancies.

  *) [TS-2148] handle_cache_operation_on_forward_server_response ignores value
    of api_server_response_no_store.
    Author: Corey Cossentino <corey@cossentino.com> 

  *) [TS-2147] Set server_share_sessions to 1 for 'internal' transactions in
   rfc5861 plugin.

  *) [TS-2114] buffer_upload plugin defines true and false
    Author: Kit Chan <chanshukit@gmail.com>

  *) [TS-2116] buffer_upload plugin is in the source tree but does not build
    Author: Kit Chan <chanshukit@gmail.com>

  *) [TS-2094] eliminate xcrun warnings at configure time

  *) [TS-2141] Inconsistent euid cause bad mgmtapi/eventapi sockets.

  *) [TS-2137] Use eventfd instread of pthread signal/wait in ATS.

  *) [TS-287] Fix transaction_active_timeout_in does not trigger on the first